--- a/web-canvas/src/components/Toolbar/index.module.css
+++ b/web-canvas/src/components/Toolbar/index.module.css
@@ -9,7 +9,7 @@
 
         .toolText {
             font-size: 11px;
-            color: theme('colors.text1')
+            color: theme('colors.text1');
         }
 
         .itemContainer {
@@ -18,11 +18,18 @@
             .colorBox {
                 @apply h-5 w-5 mr-1 rounded-sm cursor-pointer;
 
-                &:hover, &:active {
-                    border: 1px solid theme('colors.border2');
+                &:hover, &.active {
+                    border: 1.5px solid theme('colors.border2');
                     box-shadow: theme('colors.shadow2');
                 }
             }
         }
+    }
+
+    @media screen and (max-width: 640px) {
+        top: unset;
+        bottom: 0;
+        width: 100%;
+        left: 0;
     }
 }
